@@ -172,6 +172,17 @@ export(abbreviateTimeLabels,
        oce.colors9A, oceColors9A,
        oce.colors9B, oceColors9B,
        oce.colorsViridis, oceColorsViridis,
+
+       oce.colorsCDOM, oce.colorsChlorophyll, oce.colorsDensity,
+       oce.colorsFreesurface, oce.colorsOxygen, oce.colorsPAR, oce.colorsPhase,
+       oce.colorsSalinity, oce.colorsTemperature, oce.colorsTurbidity,
+       oce.colorsVelocity, oce.colorsVorticity,
+ 
+       oceColorsCDOM, oceColorsChlorophyll, oceColorsDensity,
+       oceColorsFreesurface, oceColorsOxygen, oceColorsPAR, oceColorsPhase,
+       oceColorsSalinity, oceColorsTemperature, oceColorsTurbidity,
+       oceColorsVelocity, oceColorsVorticity,
+ 
        oceGetData, oceDeleteData, oceSetData,
        oceGetMetadata, oceDeleteMetadata, oceSetMetadata,
        oce.debug, oceDebug,
