@@ -1,4 +1,3 @@
-red green blue
 0.267004 0.004874 0.329415
 0.268510 0.009605 0.335427
 0.269944 0.014625 0.341379
