@@ -1,4 +1,5 @@
 0.9-17
+- add colour palettes from Kristen Thyng's cmocean Python package
 - as.oce() added
 - rename 'drifter' class as 'argo' to recognize what it actually handles
 - add oceColorsViridis()
